# lipo

./: .gitignore  CMakeLists.txt  README.md  client_lipo.c  client_lipo.h  lib_socket.c  lib_socket.h  lipo.sln  lipo.vcxproj  lipo.vcxproj.filters  mortise_source.sh  server_lipo.c  server_lipo.h  tenon.c  tenon.h  tenon.vcxproj  tenon.vcxproj.filters  test.c  test.h
event/: event.h
network/: http.c
src/: mortise.c  mortise.h  tenon.c  tenon.h  utils.c  utils.h
src/event/: event.h  event_epoll.c  event_kqueue.c  event_manage.c  event_manage.h  lipo_event.h
src/logging/: logging.c  logging.h
src/mortise/: mortise_tenon.c  mortise_tenon.h
src/network/: http.c  http.h  lib_socket.c
src/tenon/: tenon_mortise.c  tenon_mortise.h
src/win32/: dashboard.cpp  dashboard.h  launcher.cpp  launcher.h  stdafx.cpp  tenon.cpp  tenon.h
test/: event_client.c  event_client.h
